comment inscriptions routes & fix text hidden by video

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1893,6 +1893,10 @@ nav.navbar-fixed-top {
   font-weight: 200;
 }
 
+#join {
+  padding-top: 12em;
+}
+
 /* ngDialogs */
 .ngdialog {
   /* overflow: hidden !important; */
